@startuml

title USEI04 - Domain Model

hide circle
hide methods

class Picker {
  pickerId
}

class PickingPlan {
  planId
}

class Bay {
  aisle
  bay
}

class PickingPath {
  strategy
  totalDistance
}

Picker "1" -- "*" PickingPlan : executes
PickingPlan "1" -- "1" PickingPath : generates
PickingPlan "1" -- "1..*" Bay : is composed of
PickingPath "1" -- "1..*" Bay : sequences

@enduml